feat: add function to reset future

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jvlk/rescript-future",
-  "version": "1.0.0-rc.1",
+  "version": "1.0.0-rc.3",
   "scripts": {
     "res:build": "rescript",
     "res:clean": "rescript clean",
@@ -12,7 +12,12 @@
     "future",
     "fetch"
   ],
-  "author": "",
+  "author": "josh@vlkpack.com",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jderochervlk/rescript-future/tree/main"
+  },
+  "bugs": "https://github.com/jderochervlk/rescript-future/issues",
   "license": "MIT",
   "dependencies": {
     "@rescript/core": "^0.7.0",
